[package]
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
name = "flutter-app-template"
version = "0.1.0"

[dependencies]
env_logger = "0.8.2"
flutter-engine = {path = "../flutter-rs/flutter-engine"}
flutter-winit = {path = "../flutter-rs/flutter-winit"}
glutin = "0.26.0"
log = "0.4.11"

[target.'cfg(target_os = "android")'.dependencies]
# android_glue = {git = "https://github.com/rust-windowing/android-rs-glue"}
android_logger = "0.9.2"
jni-glue = "0.0.10"
ndk = {git = "https://github.com/rust-windowing/android-ndk-rs"}

[target.'cfg(target_os = "android")'.dependencies.jni-android-sys]
features = ["api-level-18", "android-content-Context", "android-content-pm-ApplicationInfo"]
version = "0.0.10"
